@@ -12,8 +12,9 @@ hildon-application-manager (1:2.1.8~unreleased) unstable; urgency=low
   * debian/rules: Call dh_installinit.
 
   * Fixes: NB#80270, NB#83096, NB#82350, NB#83057, NB#80933, NB#83422.
-  * Fixes: NB#83127, NB#81017, NB#83537, NB#83429, NB#79211.
-
+  * Fixes: NB#83127, NB#81017, NB#83537, NB#83429, NB#79211, NB#83578.
+  * Fixes: NB#82724.
+  
  -- Marius Vollmer <marius.vollmer@nokia.com>  Tue, 25 Mar 2008 23:54:37 +0200
 
 hildon-application-manager (1:2.1.7) unstable; urgency=low
